# banksys_szai4

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: cd.yml  ci.yml
app/: __init__.py  main.py
app/ml/: train.py
app/models/: __init__.py  data_loader.py  predictor.py  visualizer.py
app/pages/: 01_data_analysis.py  02_prediction.py
standards/: 00-project-context.md  01-requirements.md  05-cicd-standards.md  PROGRESS.md
tests/: conftest.py  test_data_loader.py  test_health.py  test_predictor.py  test_train.py  test_visualizer.py
